--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-<link rel="stylesheet" href="../css/reset.css">
+<link rel="stylesheet" href="./hotsite/css/reset.css">
 <link rel="stylesheet"href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"crossorigin="anonymous">
-<link rel="stylesheet" href="../css/index.css">
+<link rel="stylesheet" href="./hotsite/css/index.css">
 
 <header>
     <div class="header" >Documentação de Análises de Regressão na Cotação Diária do Café Arábica e Milho</div>
@@ -330,22 +330,22 @@
                     <br>
                     <br>
                     <h5 style="text-align: center;">Gráfico - Regressão Linear (Café Arábica)</h5>
-                    <img class="resultados" src="../image/regressao-linear.png" />
+                    <img class="resultados" src="./hotsite/image/regressao-linear.png" />
                     <br>
 
                     <br>
                     <h5 style="text-align: center;">Gráfico - MLP (Café Arábica)</h5>
-                    <img class="resultados" src="../image/mlpCafe.png" />
+                    <img class="resultados" src="./hotsite/image/mlpCafe.png" />
                     <br>
 
                     <br>
                     <h5 style="text-align: center;">Gráfico - Bayers (Café Arábica)</h5>
-                    <img class="resultados" src="../image/bayersCafe.png" />
+                    <img class="resultados" src="./hotsite/image/bayersCafe.png" />
                     <br>
 
                     <br>
                     <h5 style="text-align: center;">Gráfico - Relaçâo dos Algoritmos (Café Arábica)</h5>
-                    <img class="resultados" src="../image/todos-modelos.png" />
+                    <img class="resultados" src="./hotsite/image/todos-modelos.png" />
                     <br>
                     <br>
                     <br>
@@ -392,29 +392,29 @@
                     </table>
                     <br>
                     <h5 style="text-align: center;">Gráfico - Regressão Linear (Milho)</h5>
-                    <img class="resultados" src="../image/linear.png" />
+                    <img class="resultados" src="./hotsite/image/linear.png" />
                     <br>
 
                     <br>
                     <h5 style="text-align: center;">Gráfico - MLP (Milho)</h5>
-                    <img class="resultados" src="../image/MLP.png" />
+                    <img class="resultados" src="./hotsite/image/MLP.png" />
                     <br>
 
                     <br>
                     <h5 style="text-align: center;">Gráfico - Bayers (Milho)</h5>
-                    <img class="resultados" src="../image/Bayers.png" />
+                    <img class="resultados" src="./hotsite/image/Bayers.png" />
                     <br>
 
                     <br>
                     <h5 style="text-align: center;">Gráfico - Relaçâo dos Algoritmos (Milho)</h5>
-                    <img class="resultados" src="../image/resultadoMilho.png" />
+                    <img class="resultados" src="./hotsite/image/resultadoMilho.png" />
                     <br>
             </div> 
     </div> 
 </body>
 <footer>
     <a href="https://github.com/MTeodoroV/Tcc-bdag" target="_blank">
-        <img class="github" src="../image/gitHub.png" /> 
+        <img class="github" src="./hotsite/image/gitHub.png" /> 
     </a>
     
 </footer>
